# spleak

./: .gitignore  CMakeLists.txt  README.md  idea.txt
cmake/: mingw64-toolchain.cmake
common/: CMakeLists.txt  logger.cpp  logger.hpp
core/: CMakeLists.txt  allocator.hpp  config.hpp  logger.cpp  logger.hpp  memory_map.cpp  memory_map.hpp  static_allocator.hpp  trace.cpp  trace.hpp  types.hpp
doc/: cross-compile.txt  idea.txt
include/spleak/: CMakeLists.txt  spleak.hpp
spleak/: CMakeLists.txt  alloc.cpp  alloc.hpp  alloc_linux.hpp  alloc_win.hpp  context.cpp  context.hpp  memory_trace.cpp  settings.hpp  statistics.cpp  statistics.hpp
test/: CMakeLists.txt  tests.cpp
test/app/: CMakeLists.txt  main.cpp
test/owner_cycles/: CMakeLists.txt  main.cpp
